--- a/my-app/src/Main.css
+++ b/my-app/src/Main.css
@@ -25,6 +25,7 @@ h1 {
   height: 100vh;
   width: 100%;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .App-header {
