--- a/my-app/src/Tile.css
+++ b/my-app/src/Tile.css
@@ -13,9 +13,16 @@
   -o-transition: margin 0.3s ease-out;
 }
 
- .tile:hover {
-    margin-top: -15px;
-    cursor: pointer;
+@media all and (max-width: 350px) {
+  .tile {
+    width: 100%;
+    height: 400px;
+  }
+}
+
+.tile:hover {
+  margin-top: -5px;
+  cursor: pointer;
 }
 
 
